# arcs_ble_net_cfg_rust

./: .gitignore  README.md
.github/workflows/: linux-appimage.yml  linux-flatpak.yml  macos-build.yml  release.yml  windows-build.yml
flatpak/: com.arcs.ble.netcfg.desktop  com.arcs.ble.netcfg.metainfo.xml  com.arcs.ble.netcfg.yml
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
