[package]
name = "arcs_ble_net_cfg"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
btleplug = "0.10"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time"] }
uuid = "1.6"
